entiteis by name
