# src/main/java/pl/polsl/projectmanagementsystem/controller/TopicController.java
@@ -10,12 +10,16 @@ import pl.polsl.management.api.controller.TopicApi;
 import pl.polsl.management.api.model.TopicFindResponseModelApi;
 import pl.polsl.management.api.model.TopicModelApi;
 import pl.polsl.management.api.model.TopicRequestModelApi;
+import pl.polsl.management.api.model.TopicResponseModelApi;
 import pl.polsl.projectmanagementsystem.dto.FindResultDto;
 import pl.polsl.projectmanagementsystem.dto.SearchDto;
 import pl.polsl.projectmanagementsystem.dto.TopicDto;
 import pl.polsl.projectmanagementsystem.mapper.topic.TopicMapper;
 import pl.polsl.projectmanagementsystem.mapper.topic.TopicFindResponseMapper;
 import pl.polsl.projectmanagementsystem.service.TopicService;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 
 @RestController
@@ -74,5 +78,16 @@ public class TopicController implements TopicApi {
         TopicDto result = topicService.getTopic(id);
 
         return new ResponseEntity<>(topicMapper.mapDtoToModelApi(result), HttpStatus.OK);
+    }
+
+    @CrossOrigin
+    @Override
+    @PreAuthorize("hasAnyAuthority('ROLE_lecturer', 'ROLE_admin', 'ROLE_student')")
+    public ResponseEntity<List<TopicModelApi>> getAllTopicsByName(String lastname) {
+        List<TopicModelApi> response = topicService.getTopicsByName(lastname).stream()
+                .map(topicMapper::mapDtoToModelApi)
+                .collect(Collectors.toList());
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
 }
